# email-sorter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train-enron.py
src/email_sorter/: __init__.py  __main__.py  train.py
src/email_sorter/emails/: __init__.py  download.py  label.py
